Update turn off console output

--- a/templates/stackviewer.mustache
+++ b/templates/stackviewer.mustache
@@ -25,7 +25,7 @@
 <script>
         {{#js}}
         iFrameResize({
-            log: true, // Enable console logging
+            log: false,
             autoResize: true,
             checkOrigin: false,
             sizeHeight: true,
