--- a/templates/stackviewer.mustache
+++ b/templates/stackviewer.mustache
@@ -33,6 +33,7 @@
 <script>
         {{#js}}
         try {
+            // eslint-disable-line
             iFrameResize({
                 log: false,
                 autoResize: true,
