--- a/templates/stackviewer.mustache
+++ b/templates/stackviewer.mustache
@@ -34,14 +34,18 @@
 <iframe src="{{{url}}}" width="{{width}}" height="{{height}}" style="border: none;" class="stackviewer-embed"></iframe>
 {{/url}}
 <script>
-    {{#js}}
-        window.iFrameResize({
-            log: false,
-            autoResize: true,
-            checkOrigin: false,
-            sizeHeight: true,
-            sizeWidth: false,
-            heightCalculationMethod: 'taggedElement'
-        });
-    {{/js}}
+{{#js}}
+try {
+    window.iFrameResize({
+        log: false,
+        autoResize: true,
+        checkOrigin: false,
+        sizeHeight: true,
+        sizeWidth: false,
+        heightCalculationMethod: 'taggedElement'
+    }); // eslint-disable-line no-use-before-define
+} catch (e) {
+    console.log('Loaded embed but not visible?', e); // eslint-disable-line no-console
+}
+{{/js}}
 </script>
